--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 40px 72px;
     max-width: 1920px;
     margin: 0 auto;
