--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -93,6 +93,9 @@
 
 
 @media screen and (max-width: 500px) {
+    .footer {
+        padding: 20px;
+    }
     .footer__column_three {
         display: none;
     }
