--- a/blocks/header.css
+++ b/blocks/header.css
@@ -16,3 +16,19 @@
     line-height: 1;
     font-weight: 400;
 }
+
+@media screen and (max-width: 767px) {
+    .header__logo {
+        width: 60px;
+    }
+    .header__slogan {
+        font-size: 14px;
+    }
+    
+}
+
+@media screen and (max-width: 500px) {
+    .header__slogan {
+        display: none;
+    }
+}
