--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -36,26 +36,26 @@
     padding: 90px 0 130px 0;
 }
 
+
 .intro__links-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+}
+
+.intro__link {
+    color: #797c81;
+    background-color: #f1f1f1;
+    font-size: 16px;
+    padding: 4px 12px;
+    margin: 0 6px;
+    border: 1px solid #797c81;
+    text-decoration: none;
 }
 
 .intro__link-elem {
     list-style: none;
     margin: 10px;
-}
-
-.intro__link {
-    text-decoration: underline;
-    font-size: 16px;
-    display: block;
-    color: #000;
-}
-
-.intro__link:hover {
-    text-decoration: none;
 }
 
 
