--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -31,9 +31,16 @@
     letter-spacing: 0.045em;
 }
 
+.intro__links-title {
+    font-size: 32px;
+    line-height: 1;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 80px 0 0 0;
+}
 
 .intro__links {
-    padding: 90px 0 130px 0;
+    padding: 40px 0 130px 0;
 }
 
 
@@ -44,12 +51,12 @@
 }
 
 .intro__link {
-    color: #797c81;
-    background-color: #f1f1f1;
+    color: #000;
+    background-color: #c9cbcf;
     font-size: 16px;
     padding: 4px 12px;
     margin: 0 6px;
-    border: 1px solid #797c81;
+    border: 1px solid #000;
     text-decoration: none;
 }
 
